tests/expected/semant09e.semant.err
semant09e.usc:18:4: error: Reassignment of arrays is not allowed
	x = "This is also a string";
	  ^
1 Error(s)
